Fix: Make settings not jump around. Fix: Auto-complete font size.

--- a/src/pages/settings/panes/Panes.module.scss
+++ b/src/pages/settings/panes/Panes.module.scss
@@ -74,14 +74,13 @@
 
 .appearance {
     .theme {
+        min-width: 0;
         display: flex;
         flex-direction: column;
-        width: 100%;
     }
 
     .themes {
         gap: 8px;
-        width: 100%;
         display: flex;
 
         img {
